# coldshot

./: .env.example  .gitignore  CLAUDE.md  README.md  cli.py  coldshot.example.toml  config.py  pyproject.toml
mailer/: __init__.py  send.py
pipeline/: __init__.py  contacts.py  discovery.py  models.py  prompts.py
recorder/: __init__.py  db.py
sumble/: __init__.py  client.py  exceptions.py  models.py
